--- a/assets/css/sass/core.scss
+++ b/assets/css/sass/core.scss
@@ -34,16 +34,40 @@
             position: relative;
             top: 35px;
             overflow: hidden;
+            
+            @media (min-width: 992px) and (max-width: 1200px) {
+                width:375px;
+                height:auto;
+
+}
             h3 {
                 font-size: 32px;
                 color: $white;
+                font-weight: 700;
                 line-height: 45px;
                 padding: 50px 50px 0;
+
+                @media screen and (max-width:991px) {
+                    font-size: 23px;
+                    padding: 25px 25px 0;
+                    line-height: 30px;
+                }
             }
             img {
                 transform: rotate(8.5deg);
                 position: relative;
                 z-index: 1;
+
+                @media (min-width: 992px) and (max-width: 1200px) {
+                    width:100%;
+                    
+    
+    }
+
+    
+    @media screen and (max-width:991px) {
+        width:100%;
+    }
             }
             .fz_box {
                 div {
@@ -71,28 +95,62 @@
                     }
                 }
             }
+
+            @media screen and (max-width:991px) {
+                width: 80%;
+                transform: none;
+                height: auto;
+                margin: 0 auto;
+            }
+        }
+
+        @media screen and (max-width:1400px) {
+            width:100%;
         }
     }
     .fz_core_text_right {
         h2 {
             font-size: 36px;
             color: $white;
+            font-weight: 700;
             line-height: 48px;
             margin-bottom: 35px;
+
+            @media screen and (max-width:991px) {
+                margin-top: 45px;
+                margin-bottom: 20px;
+                font-size: 32px;
+                // text-align: center;
+            }
         }
         h5 {
             font-size: 24px;
             color: $white;
+            font-weight: 600;
             line-height: 40px;
             margin-bottom: 50px;
+
+            @media screen and (max-width:991px) {
+                margin-bottom: 25px;
+                line-height: 30px;
+                // text-align: center;
+            }
         }
         p {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             font-size: 16px;
+            font-weight: 300;
             color: $white;
             line-height: 24px;
             margin-bottom: 48px;
+
+            
+            @media screen and (max-width:991px) {
+                margin-bottom: 30px;
+                line-height: 22px;
+               
+            }
             span {
                 background-color: $ternary-color;
                 border-radius: 50%;
@@ -106,27 +164,72 @@
         }
         div {
             margin-left: 70px;
+            display: flex;
+            align-items:center;
+
+                    
+            @media (min-width: 993px) and (max-width: 1200px) {
+                margin-left: 0;
+                justify-content: center;
+}
+
+
+@media screen and (max-width:992px) {
+    margin-left: 0;
+    justify-content: center;
+   
+ }
             .fz_learmore {
                 @include primaryBg;
-                padding: 16px 60px;
+                padding: 15px 20px;
                 border: 1px solid transparent;
                 margin-right: 35px;
+                font-weight: 400;
                 transition: all 0.5s ease-in;
+                width: 180px;
                 &:hover {
                     background: transparent;
                     border: 1px solid $primary-color;
                 }
+                .hero-join {
+                    @include hero-join;
+                  }
+                  &:hover {
+                    .hero-join {
+                      bottom: 12px;
+                    }
+                  }
+
+                @media screen and (max-width:992px) {
+                    padding:10px 30px;
+                    font-size: 14px;
+                  }
             }
             .fz_learmore_btn {
                 @include primaryBg($theme: $black, $white-color: $primary-color);
-                padding: 18px 60px;
+                padding: 15px 20px;
+                font-weight: 400;
                 border: 1px solid $primary-color;
                 transition: all 0.3s ease-in;
+                width: 180px;
                 &:hover {
                     background: $primary-color;
                     border: 1px solid transparent;
                     color: $white;
                 }
+                .hero-join {
+                    @include hero-join;
+                  }
+                  &:hover {
+                    .hero-join {
+                      bottom: 12px;
+                    }
+                  }
+
+                @media screen and (max-width:992px) {
+                    padding:10px 30px;
+                    font-size: 14px;
+                  }
             }
         }
     }
