--- a/assets/css/sass/features.scss
+++ b/assets/css/sass/features.scss
@@ -100,42 +100,7 @@
     top: calc(var(--spacer) * 4);
     z-index: 4;
   }
-//   .panel__stack .panel__card ul {
-//     margin: 0;
-//     padding-right: 30px;
-//   }
-//   .panel__stack .panel__card ul li {
-//     position: relative;
-//     margin-bottom: 15px;
-//     font-size: 1rem;
-//     padding-left: 27px;
-//   }
-//   .panel__stack .panel__card ul li::before {
-//     content: url(../images/listing-icon.svg);
-//     position: absolute;
-//     top: 0px;
-//     left: 0;
-//   }
-//   .panel__stack .panel__card ul li:last-child {
-//     margin-bottom: 0;
-//   }
-//   .panel__stack .panel__card .green-bullets li::before {
-//     content: url(../images/green-list-icon.svg);
-//     position: absolute;
-//     top: 0px;
-//     left: 0;
-//   }
-//   .panel__stack .panel__card .orange-bullets li::before {
-//     content: url(../images/orange-list-icon.svg);
-//     position: absolute;
-//     top: 0px;
-//     left: 0;
-//   }
-//   .panel__stack .panel__card picture {
-//     position: relative;
-//     right: -10px;
-//   }
-  
+
   .panel__content {
     width: 48%;
   }
@@ -255,7 +220,9 @@
         gap: 40px;
         align-items: center;
         span {
-            font-size: 16px;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 36px;
             color: $white;
             padding: 12px 0; 
             transition: all 0.5s ease;
@@ -270,6 +237,8 @@
             h2 {
                 color: $white;
                 font-size: 36px;
+                font-weight: 600;
+                line-height: 32px;
                 margin-bottom: 30px;
             }
             .nav.nav-pills {
@@ -303,10 +272,18 @@
                     }
                     .item-pay {
                         border-radius: 8px;
+                        min-width: 30%;
+                        background: #fff;
                         @media screen and (min-width: 768px) and (max-width: 1199px) {
                           width: calc(50% - 20px);
                         }
+                        svg{
+                          width: 100%;
+                          height: 270px!important;
+                        }
                         img {
+                          width: 100%;
+                          height: 270px;
                           @media screen and (min-width: 768px) and (max-width: 1199px) {
                             width: 100%;
                           }
@@ -319,10 +296,13 @@
                             h3 {
                                 color: $secondary-color;
                                 font-size: 20px;
+                                font-weight: 700;
+                                line-height: 36px;
                             }
                             p {
                                 color: $white;
                                 font-size: 18px;
+                                font-weight: 400;
                                 line-height: 25px;
                                 min-height: 75px;
                             }
