--- a/assets/css/sass/blog.scss
+++ b/assets/css/sass/blog.scss
@@ -1,4 +1,4 @@
-@import './variable.scss';
+@import "./variable.scss";
 .fz-blog {
   background-color: $bg-color;
 
@@ -10,16 +10,25 @@
     text-align: center;
     padding: 66px 0 84px;
 
+    @media screen and (max-width: 992px) {
+      padding: 66px 0 30px;
+    }
+
     h3 {
       color: $primary-color;
       font-size: 50px;
+      font-weight: 500;
       line-height: 58px;
     }
 
     p {
       color: $white;
       font-size: 20px;
+      font-weight: 400;
       line-height: 30px;
+      @media screen and (max-width: 991px) {
+        line-height: 25px;
+      }
     }
   }
 
@@ -32,6 +41,9 @@
     img {
       width: 100%;
       height: 276px;
+      @media screen and (max-width: 991px) {
+        height: 100%;
+      }
     }
 
     .card-body {
@@ -41,9 +53,15 @@
       border: 1px solid $tertiary-color;
       margin: 0 auto;
 
+      @media screen and (max-width: 991px) {
+        width: 100%;
+        padding: 0px 25px 30px 24px;
+      }
+
       h5 {
         font-size: 22px;
         line-height: 30px;
+        font-weight: 500;
         padding-bottom: 18px;
         font-weight: bold;
         color: $primary-color;
@@ -52,14 +70,20 @@
       .card-text {
         font-size: 16px;
         line-height: 24px;
+        font-weight: 400;
       }
 
       .card-top-title {
         display: flex;
         justify-content: space-between;
         font-size: 16px;
+        font-weight: 500;
         line-height: 18px;
         padding: 34px 0 28px 0;
+
+        @media screen and (max-width: 991px) {
+          padding: 15px 0 10px 0;
+        }
       }
     }
   }
@@ -71,54 +95,60 @@
     }
     .owl-nav {
       display: flex;
-      justify-content: end; 
-      gap: 162px; 
+      justify-content: end;
+      gap: 162px;
       position: relative;
       margin-top: 50px;
-        .custom-prev,
-        .custom-next {
-          font-size: 16px;
-          font-weight: 500;
-          color:$white;
-          cursor: pointer;
-          transition: all 0.3s ease;
-      
-          &:hover {
-            color: $primary-color; 
-          }
-          
+      .custom-prev,
+      .custom-next {
+        font-size: 16px;
+        font-weight: 500;
+        color: $white;
+        cursor: pointer;
+        transition: all 0.3s ease;
+
+        &:hover {
+          color: $primary-color;
         }
-        &::after {
-          content: '';
-          width: 80px; 
-          height: 2.27px; 
-         
-          position: absolute;
-          background:$white; 
-          top: 50%; 
-          transform: translateY(-50%); 
-          left: 88%; 
-          transform: translate(-50%, -50%);
+      }
+      &::after {
+        content: "";
+        width: 80px;
+        height: 2.27px;
+        position: absolute;
+        background: $white;
+        top: 50%;
+        transform: translateY(-50%);
+        transform: translate(-50%, -50%);
+        @media screen and (max-width: 991px) {
+          justify-content: center;
         }
-        
-        &::before {
-          content: '';
-          width: 80px; 
-          height: 2.27px; 
-          background:$primary-color; 
-          position: absolute;
-          top: 50%; 
-          transform: translateY(-50%); 
-          left: 93%; 
-          transform: translate(-50%, -50%);
+      }
+
+      &::before {
+        content: "";
+        width: 80px;
+        height: 2.27px;
+        background: $primary-color;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 87%;
+        transform: translate(-50%, -50%);
+        @media screen and (max-width: 991px) {
+          left:60%;
         }
-        .custom-prev {
-          color:$primary-color;
-        }
-        .custom-next {
-          color:$white;
-        }
+      }
+      .custom-prev {
+        color: $primary-color;
+      }
+      .custom-next {
+        color: $white;
+      }
+
+      @media screen and (max-width: 991px) {
+        justify-content: center;
+      }
     }
-    
   }
 }
