--- a/assets/css/sass/counter.scss
+++ b/assets/css/sass/counter.scss
@@ -10,6 +10,12 @@
       position: absolute;
       right: 30px;
       top: 50px;
+      @media screen and (max-width:999px) {
+        position: relative;
+        top:0;
+        width:100%;
+        right:0;
+    }
     }
     .waves > use {
       animation: move-forever 2s -2s linear infinite;
@@ -52,7 +58,7 @@
       }
     }
     h2{
-      // font-family: Roboto;
+     
       font-size: 50px;
       font-weight: 500;
       line-height: 60px;
@@ -63,7 +69,7 @@
       text-align: center;
     }
     p{
-      // font-family: Open Sans;
+     
       font-size: 16px;
       font-weight: 600;
       line-height: 30px;
@@ -85,12 +91,11 @@
       span{
         font-size: 24px;
         font-weight: 500;
-        line-height: 31.25px;
+        line-height: 60px;
         letter-spacing: 1px;
         text-align: center;
         text-underline-position: from-font;
         text-decoration-skip-ink: none;
-        font-weight: 600;
         color: #FFFFFF; 
         padding-bottom: 20px;
       }
@@ -128,7 +133,9 @@
         .count{
           flex: 1;
           text-align: center;
-          font-size:70px;
+          font-size:50px;
+          line-height: 60px;
+          font-weight: 700;
           font-weight: bolder;
           color: #FFFFFF; 
           background-image: linear-gradient(180deg, #FFFFFF 0%, #3EAB90 100%); 
@@ -137,7 +144,7 @@
           -webkit-text-fill-color: transparent; 
         }
         .count.percent_1:after {
-          content: "%";
+          content: "+";
           display: inline-block;
         }
         .count.m_letter:after {
