--- a/assets/css/sass/developer.scss
+++ b/assets/css/sass/developer.scss
@@ -2,9 +2,20 @@
 .developer_section{
     background-color: $black;
     padding: 60px 0px 100px;
+    .dev_api_images{
+        // width:500px;
+        // height:500px;
+        margin: 0 auto;
+        padding:50px;
+    }
+    .dev_api_images img{
+        width:100%;
+        height:100%;
+    }
     h3{
         color: $white;
-        font-size: 35px;
+        font-size: 40px;
+        font-weight: 700;
         @media screen and (max-width:992px) {
             text-align: center;
         }
@@ -13,6 +24,11 @@
         color: $primary-color;
         font-size: 30px;
         padding-bottom:40px;
+        font-weight: 400;
+
+        @media screen and (max-width:992px) {
+            text-align: center;
+        }
     }
     .dev_left{
         border-radius: 20px;
@@ -55,6 +71,10 @@
                 --border-angle: 1turn;
                 }
             }
+
+            @media screen and (max-width:992px) {
+                text-align: center;
+            }
         }
        
         @media screen and (max-width:992px) {
@@ -81,12 +101,14 @@
         }
         h4{
             font-size: 20px;
+            font-weight: 500;
             color: $primary-color;
             padding-bottom:10px;
             color: #d7ba7d;
         }
         p{
             color: $white;
+            font-weight: 400;
             margin-bottom: 0px;
             transition: all 0.6s ease;
         }
@@ -100,15 +122,9 @@
         text-align: left; /* Align text to the left */
         max-width: 100%; /* Allow the code to wrap naturally */
     }
-    #processingText{
-        color: $white;
-    }
-
     #typingEffect{
         color: #d7ba7d;
         border-top: 1px solid #64748B4D;
-        padding-top: 20px;
-        padding: 10px;
         position: relative;
       }
 
@@ -138,37 +154,57 @@
             background-position: center center;
             animation: bg-spin 4s linear infinite;
             animation-delay: 0.5s; 
-            min-height: 600px;
+            min-height: auto;
+            height: 205px;
             @keyframes bg-spin {
                 to {
                 --border-angle: 1turn;
                 }
             }
+               
+                .CodeMirror-scroll{
+                    background-color:#1A2D2C !important;
+                    .CodeMirror-gutter{
+                        background-color: #1A2D2C !important;
+                    }
+                    .cm-keyword{
+                        color:#569CD6 !important;
+                    }
+                    .cm-def{
+                       color: #d4d4d4 !important;
+                    }
+                    .CodeMirror-code{
+                        color: #d4d4d4 !important;
+                    }
+                    .cm-variable{
+                        color: #569CD6 !important;
+                    }
+                    .cm-string{
+                        color: #CE9178 !important;
+                    }
+                    .cm-number{
+                        color: #B5CEA8 !important;
+                    }
+                    .cm-property{
+                        color: #d4d4d4 !important;
+                    }
+                }
+            
         }
-
-        // .cursor {
-        //     display: inline-block;
-        //     width: 8px;
-        //     height: 16px;
-        //     background: #d4d4d4;
-        //     animation: blink 0.7s steps(1) infinite;
-        // }
-
-        // @keyframes blink {
-        //     50% {
-        //         background: transparent;
-        //     }
-        // }
+        .CodeMirror-gutters{
+            border-right: 1px solid #64748b4d !important;
+            background-color: #64748b4d !important;
+        }
+       
+        textarea{
+            display:none;
+        }
 
         .line {
             display: block;
         }
 
-        .keyword { color: #569cd6; } /* Keywords */
-        .string { color: #ce9178; } /* Strings */
-        .tag { color: #d7ba7d; } /* HTML tags */
-        .attribute { color: #9cdcfe; } /* Attributes */
-        .comment { color: #6a9955; font-style: italic; } /* Comments */
+       
 
         ul{
             padding: 0px;
