--- a/assets/css/sass/faq.scss
+++ b/assets/css/sass/faq.scss
@@ -35,17 +35,24 @@
       .accordion-item .accordion-header .accordion-button{
         position: relative;
         top: 2px;
-        padding: 25px 42px;
+        padding: 10px 20px;
         background: $black !important;
-        font-size: 20px;
-        font-weight: 500;
+        font-size: 16px;
+        font-weight: 600;
         line-height: 48px;
-        letter-spacing: 2px;
+        letter-spacing: 1px;
         text-align: left;
         text-underline-position: from-font;
         text-decoration-skip-ink: none;
         color: $white;
         border-radius: 16px !important;
+
+        
+    @media screen and (max-width: 768px) {
+      line-height: 24px;
+      padding: 14px 24px;
+      font-size: 16px;
+    }
       }
       .accordion-item{
         margin-bottom:20px;
@@ -54,11 +61,11 @@
         background-color: $black !important;
       }
       .accordion-body{
-        font-size: 18px;
+        font-size: 14px;
         background-color: $black;
         color: $white;
         border-radius: 16px !important;
-        padding: 0px 43px 40px;
+        padding: 0px 20px 20px;
       }
       .accordion-button:not(.collapsed){
         box-shadow: none;
@@ -73,28 +80,7 @@
         --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
         --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
       }
-    //   .accordion-button::after {
-    //     background-image: none;
-    //     font-family: "Font Awesome 6 Free";
-    //     content: "+";
-    //     height: 35px;
-    //     width: 35px;
-    //     font-weight: bold;
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-    //     border-radius: 50%;
-    //     border: 1px solid var(--secondary-color);
-    //     // background-color: $primary-color !important;
-    //     background: transparent !important;
-    //     color: var(--secondary-color);
-    // }
     
-    // .accordion-button:not(.collapsed)::after {
-    //     background-image: none;
-    //     content: "_"; 
-    //     color: $white;
-    // }
     h4{
      font-size: 24px;
      font-weight: 500;
@@ -104,8 +90,12 @@
     h3{
        font-size: 40px;
        color: $primary-color; 
-       font-weight: 600;
-       padding-bottom: 50px;
+       font-weight: 500;
+      //  padding-bottom: 50px;
+       @media screen and (max-width: 768px) {
+        font-size: 35px;
+        padding-bottom: 25px;
+      }
        br{
         @media screen and (max-width:992px) {
           display: none;
