--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -10,6 +10,7 @@
         .footer_logo{
             width: 135px;
             height: 40px;
+
             @media screen and (max-width:992px) {
                 margin: 0 auto;
             }
@@ -22,6 +23,8 @@
         p{
             color: $white;
             padding: 20px 0px 10px;
+            font-weight: 400;
+            font-size: 16px;
             @media screen and (max-width:992px) {
                 text-align: center;
             }
@@ -30,6 +33,9 @@
             color: $white;
             text-decoration: none;
             padding-top: 10px;
+            font-size: 17px;
+            line-height: 19px;
+            font-weight: 400;
             @media screen and (max-width:992px) {
                 text-align: center;
                 display: inline-block;
@@ -52,6 +58,9 @@
     }
     h5{
         color: $white;
+        font-size: 22px;
+        line-height: 24px;
+        font-weight: 500;
         @media screen and (max-width:992px) {
           padding-top: 20px;
         }
@@ -65,19 +74,44 @@
         padding: 10px 0px;
         a{
             color: $white;
+            font-size: 17px;
+            font-weight: 400;
+            line-height: 36px;
             text-decoration: none;
+            transition: all 0.6s ease;
+                    &:hover {
+                      color: $secondary-color;
+                      }
         }
     }
     .copy_rights{
         display: flex;
         justify-content: space-between;
         padding: 80px 0px 70px;
+        align-items: center;
         .copy_rights_1{
             color: $white;
+            p{
+                margin: 0;
+            }
             ul{
                 li{
                     display: inline-block;
                     padding: 0px 5px;
+                }
+            }
+            &.fz_social_icon {
+                a {
+                    width: 40px;
+                    height: 40px;
+                    display: inline-block;
+                    text-align: center;
+                    border-radius: 50%;
+                    background: $tertiary-color;
+                    line-height: 35px;
+                    &:hover{
+                        background: $secondary-color;
+                    }
                 }
             }
         }
