--- a/assets/css/sass/newsletter.scss
+++ b/assets/css/sass/newsletter.scss
@@ -12,9 +12,10 @@
         font-weight: 500;
         line-height: 70.31px;
         margin-bottom: 0px;
-      @media screen and (max-width:992px) {
-       font-size: 50px;
-      }
+        @media screen and (max-width:992px) {
+          font-size: 50px;
+          line-height: 55px;
+         }
     }
     h5{
     font-size: 35px;
@@ -24,6 +25,10 @@
     text-align: center;
     margin-bottom: 0px;
     padding-top: 15px;
+    @media screen and (max-width:992px) {
+      font-size: 30px;
+      line-height: 40px;
+     }
     }
     .input-group{
     width: 636.71px;
@@ -36,8 +41,9 @@
     margin-top: 72px;
     border: none;
     @media screen and (max-width:992px) {
-        width: auto;
-      }
+      width: auto;
+      margin-top: 40px;
+    }
     button{
         background-color: $primary-color !important;
         width: 165px;
