--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -1,7 +1,6 @@
 @import "./variable.scss";
-$font-style: "Montserrat", sans-serif;
+
 .fz_product_sec {
-//   background-color: #1a2c2a;
   position: relative;
   z-index: 0;
   .fz_container {
@@ -10,77 +9,77 @@ $font-style: "Montserrat", sans-serif;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
     overflow: hidden;
-    @media only screen and (max-width: 720px) {
-       display: block;
+    @media only screen and (max-width: 1200px) {
+      display: block;
+    }
+    @keyframes animateBg {
+      0% {
+        background-position: 0% 0%;
       }
-      @keyframes animateBg {
-        0% {
-          background-position: 0% 0%;
-        }
-        100% {
-          background-position: 0% 100%;
-        }
+      100% {
+        background-position: 0% 100%;
       }
-      @mixin anim-global {
-        animation: animateBg 11s linear infinite;
-        background-size: 100% 300%;
-      }
-      .item-1 {
-        @include anim-global;
-        background-image: linear-gradient(
-          0deg,
-          #18273a,
-          #003224,
-          #18273a,
-          #003224
-        );
-      }
-      .item-2 {
-        @include anim-global;
-        background-image: linear-gradient(
-          0deg,
-          #01391f,
-          #0b3638,
-          #01391f,
-          #0b3638
-        );
-      }
-      .item-3 {
-        @include anim-global;
-        background-image: linear-gradient(
-          0deg,
-          #013a34,
-          #2e3301,
-          #013a34,
-          #2e3301
-        );
-      }
-      .item-4 {
-        @include anim-global;
-        background-image: linear-gradient(
-          0deg,
-          #373f01,
-          #012949,
-          #373f01,
-          #012949
-        );
-      }
-      .item-5 {
-        @include anim-global;
-        background-image: linear-gradient(
-          0deg,
-          #18273a,
-          #003224,
-          #18273a,
-          #003224
-        );
-      }  
+    }
+    @mixin anim-global {
+      animation: animateBg 11s linear infinite;
+      background-size: 100% 300%;
+    }
+    .item-1 {
+      @include anim-global;
+      background-image: linear-gradient(
+        0deg,
+        #18273a,
+        #003224,
+        #18273a,
+        #003224
+      );
+    }
+    .item-2 {
+      @include anim-global;
+      background-image: linear-gradient(
+        0deg,
+        #01391f,
+        #0b3638,
+        #01391f,
+        #0b3638
+      );
+    }
+    .item-3 {
+      @include anim-global;
+      background-image: linear-gradient(
+        0deg,
+        #013a34,
+        #2e3301,
+        #013a34,
+        #2e3301
+      );
+    }
+    .item-4 {
+      @include anim-global;
+      background-image: linear-gradient(
+        0deg,
+        #373f01,
+        #012949,
+        #373f01,
+        #012949
+      );
+    }
+    .item-5 {
+      @include anim-global;
+      background-image: linear-gradient(
+        0deg,
+        #18273a,
+        #003224,
+        #18273a,
+        #003224
+      );
+    }
     .fz_sub_container {
       display: flex;
       align-items: center;
       height: 100vh;
       gap: 260px;
-      padding: 92px 100px;
+      padding: 0px 100px;
       @media only screen and (max-width: 1600px) {
         gap: 160px;
       }
@@ -90,162 +89,140 @@ $font-style: "Montserrat", sans-serif;
       }
       @media only screen and (max-width: 1280px) {
         gap: 24px;
-        padding: 30px 16px;
+        padding: 30px 16px 76px 16px;
+        height: auto;
       }
       @media only screen and (max-width: 720px) {
         display: block;
         gap: 16px;
-       }
+        height: auto;
+      }
       .fz_content {
         position: relative;
         width: 620px;
-        @media only screen and (max-width: 720px) {
-            width: 100%;
-           }
-        &:after {
-          content: "";
-          position: absolute;
-          width: 676px;
-          height: 676px;
-          top: 5px;
-          left: -12px;
-          background-color: #20918182;
-          border-radius: 50%;
-          filter: blur(152px);
-          transform: translate3d(0, 0, 0);
-          z-index: -1;
+        @media only screen and (max-width: 1200px) {
+          width: 100%;
         }
+        // &:after {
+        //   content: "";
+        //   position: absolute;
+        //   width: 676px;
+        //   height: 676px;
+        //   top: 5px;
+        //   left: -12px;
+        //   background-color: #20918182;
+        //   border-radius: 50%;
+        //   filter: blur(152px);
+        //   transform: translate3d(0, 0, 0);
+        //   z-index: -1;
+        // }
         .fz_num {
-          padding-bottom: 16px;
+        
           h3 {
-            font-family: "Montserrat", sans-serif;
+            line-height: 100px;
             font-size: 128px;
             font-weight: 600;
             color: $white;
+
+            @media screen and (max-width: 1200px) {
+              font-size: 80px;
+            }
           }
         }
         .fz_title {
-          font-family: $font-style;
           font-size: 36px;
           font-weight: 700;
+          line-height: 49px;
           color: $secondary-color;
-          padding-bottom: 16px;
+          padding-bottom: 2px;
         }
         .fz_subtitle {
-          font-family: $font-style;
-          font-size: 36px;
-          font-weight: 700;
+          font-size: 26px;
+          font-weight: 200;
+          line-height: 26px;
           color: $primary-color;
-          padding-bottom: 20px;
+          padding-bottom: 10px;
+
+          @media screen and (max-width: 1200px) {
+            line-height: 40px;
+          }
         }
         .fz_bank {
-          font-family: $font-style;
           font-size: 20px;
-          font-weight: 600;
+          font-weight: 500;
           color: $white;
-          padding-bottom: 32px;
-          line-height: 32px;
+          padding-bottom: 20px;
+          line-height: 30px;
         }
         .fz_desc {
-          font-family: $font-style;
           font-size: 16px;
           font-weight: 400;
           color: $white;
-          padding-bottom: 32px;
+          padding-bottom: 26px;
           line-height: 26px;
         }
         .fz_btn button {
+          @include primaryBg;
           font-size: 16px;
           font-weight: 400;
-          background-color: $primary-color;
-          color: $white;
-          padding: 14px 64px;
+          padding: 15px 20px;
           border-radius: 32px;
           border: none;
           cursor: pointer;
+          position: relative;
+          overflow: hidden;
+          display: flex;
+          width: 180px;
+          &:hover{
+            background-image: linear-gradient(180deg, #3eab90 0%, #003224 100%);
+          }
+          .hero-join {
+            @include hero-join;
+          }
+          &:hover {
+            .hero-join {
+              bottom: 12px;
+            }
+          }
         }
       }
       .fz_img-sec {
         position: relative;
-        &::after {
-          content: "";
-          position: absolute;
-          width: 366px;
-          height: 330px;
-          top: 290px;
-          right: 50px;
-          background: #24a7af;
-          filter: blur(212px);
-          transform: translate3d(0, 0, 0);
-        
-        }
+        // &::after {
+        //   content: "";
+        //   position: absolute;
+        //   width: 366px;
+        //   height: 330px;
+        //   top: 290px;
+        //   right: 50px;
+        //   background: #24a7af;
+        //   filter: blur(212px);
+        //   transform: translate3d(0, 0, 0);
+        // }
         .fz_img {
           position: relative;
           .image_1 {
             opacity: 0.3;
-            @media only screen and (max-width: 720px) {
-                width: 100%;
-                // height: 100%;
-               }
+            @media only screen and (max-width: 1200px) {
+              width: 100%;
+              // height: 100%;
+            }
           }
-          img {
+          img, object,svg, embed, video {
             &:last-child {
               position: absolute;
               left: 50%;
               top: 50%;
               transform: translate(-50%, -50%);
+              min-width:75%;
+              width: 75%;
+
+              @media only screen and (max-width: 1200px) {
+                width: 100%;
+                margin-top: 10px;
+              }
             }
           }
-          
-          // .core_img {
-          //   position: absolute;
-          //   top: 0;
-          //   left: 42px;
-          //   @media only screen and (max-width: 720px) {
-          //       width: 100%;
-          //       left: 0px;
-          //      }
-          // }
-          // .bank_img {
-          //   position: absolute;
-          //   bottom: 54px;
-          //   left: 146px;
-          //   @media only screen and (max-width: 720px) {
-          //       width: 100%;
-          //       left: 0px;
-          //       bottom: 0;
-          //      }
-          // }
-          // .payunity_img {
-          //   position: absolute;
-          //   bottom: 88px;
-          //   left: 144px;
-          //   @media only screen and (max-width: 720px) {
-          //       width: 100%;
-          //       left: 0px;
-          //       bottom: 0;
-          //      }
-          // }
-          // .translinker_img {
-          //   position: absolute;
-          //   bottom: 80px;
-          //   left: 142px;
-          //   @media only screen and (max-width: 720px) {
-          //       width: 100%;
-          //       left: 0px;
-          //       bottom: 0;
-          //      }
-          // }
-          // .flowgate_img {
-          //   position: absolute;
-          //   top: 100px;
-          //   left: 146px;
-          //   @media only screen and (max-width: 720px) {
-          //       width: 100%;
-          //       left: 0px;
-          //       bottom: 0;
-          //      }
-          // }
         }
       }
     }
