--- a/assets/css/sass/testimonial.scss
+++ b/assets/css/sass/testimonial.scss
@@ -3,6 +3,9 @@
   padding: 80px 0 0;
   .fz_testimonial_top {
     padding-bottom: 50px;
+    @media screen and (max-width: 992px) {
+      text-align: center;
+    }
     h2 {
       font-size: 48px;
       font-weight: 600;
@@ -11,7 +14,7 @@
       padding-bottom: 16px;
     }
     p {
-      width: 550px;
+      // width: 550px;
       font-size: 16px;
       font-weight: 600;
       line-height: 26px;
